k8s/qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrent
  namespace: qbittorrent
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.100.252
  ports:
    - port: 8388
      targetPort: torrent-tcp
      protocol: TCP
      name: torrent-tcp
    - port: 8388
      targetPort: torrent-udp
      protocol: UDP
      name: torrent-udp
  selector:
    app: qbittorrent
---
# Source: qbittorrent/templates/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-web
  namespace: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: qbittorrent
